crates/cockpitctl-sarif/tests/snapshots/sarif_schema_integration__edge_cases_mixed_locations.snap
---
source: crates/cockpitctl-sarif/tests/sarif_schema_integration.rs
assertion_line: 489
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "E1",
              "shortDescription": {
                "text": "[s1] E1"
              }
            },
            {
              "id": "I1",
              "shortDescription": {
                "text": "[s3] I1"
              }
            },
            {
              "id": "W1",
              "shortDescription": {
                "text": "[s2] W1"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "E1",
          "level": "error",
          "message": {
            "text": "full loc"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/a.rs"
                },
                "region": {
                  "startLine": 10,
                  "startColumn": 5
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp1"
          }
        },
        {
          "ruleId": "W1",
          "level": "warning",
          "message": {
            "text": "path only"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/b.rs"
                }
              }
            }
          ]
        },
        {
          "ruleId": "I1",
          "level": "note",
          "message": {
            "text": "no loc"
          }
        }
      ]
    }
  ]
}
