crates/cockpitctl-sarif/tests/snapshots/sarif_schema_integration__schema_compliance_full.snap
---
source: crates/cockpitctl-sarif/tests/sarif_schema_integration.rs
assertion_line: 477
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0",
          "rules": [
            {
              "id": "E100",
              "shortDescription": {
                "text": "[sec] E100"
              }
            },
            {
              "id": "E200",
              "shortDescription": {
                "text": "[clippy] E200"
              }
            },
            {
              "id": "I050",
              "shortDescription": {
                "text": "[lint] I050"
              }
            },
            {
              "id": "W001",
              "shortDescription": {
                "text": "[clippy] W001"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "W001",
          "level": "warning",
          "message": {
            "text": "warn1"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "a.rs"
                },
                "region": {
                  "startLine": 1
                }
              }
            }
          ]
        },
        {
          "ruleId": "E100",
          "level": "error",
          "message": {
            "text": "err1"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "b.rs"
                },
                "region": {
                  "startLine": 5,
                  "startColumn": 3
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp1"
          }
        },
        {
          "ruleId": "I050",
          "level": "note",
          "message": {
            "text": "info1"
          }
        },
        {
          "ruleId": "E200",
          "level": "error",
          "message": {
            "text": "err2"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "c.rs"
                },
                "region": {
                  "startLine": 99
                }
              }
            }
          ],
          "fingerprints": {
            "cockpitctl/v1": "fp2"
          }
        },
        {
          "ruleId": "W001",
          "level": "warning",
          "message": {
            "text": "warn2"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "d.rs"
                },
                "region": {
                  "startLine": 7
                }
              }
            }
          ]
        }
      ]
    }
  ]
}
