crates/cockpitctl-sarif/tests/snapshots/sarif_schema_integration__schema_integration_empty.snap
---
source: crates/cockpitctl-sarif/tests/sarif_schema_integration.rs
assertion_line: 495
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "cockpitctl",
          "version": "0.3.0"
        }
      },
      "results": []
    }
  ]
}
